8.3.1/components/headline.mdx
---
description: Компонент для отображения подзаголовков и акцентного текста внутри секций интерфейса.
tags: heading
---

<Overview group="typography" forcedPath="components/Typography/Headline/Headline.tsx">

# Headline [tag:component]

Компонент для отображения подзаголовков и акцентного текста внутри секций интерфейса.

</Overview>

{/* @example-description: Два уровня Headline для сравнения размеров. */}
<Playground>
  ```jsx
  <Flex direction="column">
    <Headline level="1">Headline уровень 1</Headline>
    <Headline level="2">Headline уровень 2</Headline>
  </Flex>
  ```
</Playground>

## Свойства и методы [#api]

| Свойство | Тип | По умолчанию | Описание |
| --- | --- | --- | --- |
| `align` | `"start" \| "center" \| "end"` | `-` | Выравнивание текста. Не имеет эффекта при inline={true}. |
| `Component` | `ElementType<any, keyof IntrinsicElements>` | `span` |  |
| `getRootRef` | `Ref<HTMLElement>` | `-` |  |
| `inline` | `boolean` | `false` | Делает блок инлайновым. |
| `level` | `"1" \| "2"` | `1` | Уровень заголовка (от 1 до 2). |
| `normalize` | `boolean` | `true` | Убирает внешние отступы. |
| `useAccentWeight` | `boolean` | `-` | Включает акцентный тип начертания шрифта. Используются токены fontWeightAccent[1, 2, 3] Используется только вместе с `weight`. |
| `weight` | `"1" \| "2" \| "3"` | `-` | Задаёт начертание шрифта, отличное от стандартного. |

